Finish fixing code errors